--- a/front/package.json
+++ b/front/package.json
@@ -32,5 +32,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
+    "pegjs": "^0.10.0",
+    "ts-pegjs": "^0.2.6"
   }
 }
